--- a/DocSearch2.1/Views/Home/Index.cshtml
+++ b/DocSearch2.1/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 {
 
     <h1>Enter the Client Id then Submit</h1>
-
+    <h2>Client Id with a picture: 1403635</h2>
     @Html.Label("ClientId", "Client Id ")
     @Html.TextBox("ClientId", 568801);
 
