--- a/DocSearch2.1/Views/PublicVM/_PublicTable.cshtml
+++ b/DocSearch2.1/Views/PublicVM/_PublicTable.cshtml
@@ -62,7 +62,7 @@
                     <td>
                         @Html.ActionLink(item.FileType, "FileDisplay", new { documentId = item.Document_ID }, new { target = "_blank" }) 
                         @if (item.FileType == "Picture JPEG") {
-                            @Html.ActionLink("[Preview]", "FileDisplay", new { documentId = item.Document_ID })
+                            @Html.ActionLink("[Preview]", "FileDisplay", new { documentId = item.Document_ID }, new { @class = "preview", id = item.Document_ID})
                         }
                     </td>
                     <td>OPEN ME</td>
