--- a/DocSearch2.1/Views/Shared/_Layout.cshtml
+++ b/DocSearch2.1/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
                initial-scale=1.0
                " />                <!--,maximum-scale=1.0, user-scalable=no-->
     <title>@ViewBag.Title</title>
+    @*<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">*@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr") <!--modernizr must be in head of script-->
 </head>
