Realized Old Navbar was flawed as pagination dictated which navbar properties were brought in.  New version of navbar will work off tempdata to populate itself with the overall model (before pagination took affect).  Got the Cate-Doctype Navbar list items to populate correctly

--- a/DocSearch2.1/Views/PublicVM/Index.cshtml
+++ b/DocSearch2.1/Views/PublicVM/Index.cshtml
@@ -43,6 +43,24 @@
 
                 <div id="category_section">
                     <h2>Categories</h2>
+
+                    <ul>
+                        @foreach (var item in ViewBag.NavBar) {
+                            <li>
+                                @item.CategoryName
+                                <ul>
+                                    @foreach (var dt in item.DocumentTypeName)
+                                    {
+                                        <li>
+                                            @dt
+                                        </li>
+                                    }
+                                </ul>
+
+                            </li>
+                        }
+                    </ul>
+
                     <ul id="category_list">
                         @foreach (var item in Model.GroupBy(m => m.CategoryName).Select(g => g.First()))
                         {
