Upgraded search feature to now alert for a search that returns no results.

--- a/DocSearch2.1/Views/PublicVM/_PublicTable.cshtml
+++ b/DocSearch2.1/Views/PublicVM/_PublicTable.cshtml
@@ -105,3 +105,9 @@
 
 </div>
 
+@if ((bool)ViewData["goodSearch"] == false)
+{
+    <script type="text/javascript">
+                alert('Sorry, your search came up empty.  Clearing Search.');
+    </script>
+}
